# harrasment-detection

./: .gitignore  Makefile  QUICK_SETUP.md  README.md  SETUP_GUIDE.md  environment.yml  install_in_conda.sh  pyproject.toml  setup.sh  setup_venv.sh  simple_curl_tests.sh  simple_setup.sh  test_api.py  test_webcam.py
app/: __init__.py  api.py  main.py  pipeline.py  simple_api.py
config/: default.yaml
core/: __init__.py
core/action/: __init__.py  base.py  custom.py  dummy.py  movinet.py  registry.py
core/detection/: __init__.py  base.py  dummy_detector.py  yolo_detector.py
core/video/: __init__.py  base.py  webcam.py
docs/: project_structure.md
tests/: __init__.py  debug_system.py  quick_install.py  test_person_detection.py
